--- a/Barcode/WebContent/member/mypage.html
+++ b/Barcode/WebContent/member/mypage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0081)file:///C:/Users/DISKSMART/git/searchportal/Barcode/WebContent/member/mypage.html -->
+<!-- saved from url=(0075)file:///C:/Users/Soo/git/SearchPortal/Barcode/WebContent/member/mypage.html -->
 <html lang="ko"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 <link rel="stylesheet" type="text/css" href="./mypage_files/help_member.css">
@@ -46,7 +46,7 @@
 									</div>
 									<a href="https://nid.naver.com/user2/help/myInfo.nhn?lang=ko_KR#" class="gnb_my_interface" style="display: none"><span class="blind">환경설정</span></a>
 								</div>
-								<iframe id="gnb_my_lyr_iframe" title="빈 프레임" class="gnb_pad_lyr" name="padding" width="0" height="0" scrolling="no" frameborder="0" style="top: 55px; right: 10px; width: 320px; height: 174px; display: none; opacity: 0;"></iframe></li>
+								<iframe id="gnb_my_lyr_iframe" title="빈 프레임" class="gnb_pad_lyr" name="padding" width="0" height="0" scrolling="no" frameborder="0" style="top: 55px; right: 10px; width: 320px; height: 174px; display: none; opacity: 0;" src="./mypage_files/saved_resource.html"></iframe></li>
 							<li class="gnb_notice_li" id="gnb_notice_layer" style="display: inline-block;"><a href="javascript:;" class="gnb_notice" onclick="gnbNaverMeLayer.clickToggle(); return false;"><span class="blind">알림</span><span class="gnb_icon"></span><em class="gnb_ico_num" id="gnb_me_menu" style="display: none"><span class="gnb_ico_new"><span class="gnb_count" id="gnb_me_count" style="display: inline-block;"></span></span></em><span class="ico_arrow"></span></a>
 							<div class="gnb_notice_lyr" id="gnb_notice_lyr">
 									<div class="svc_noti svc_panel">
@@ -75,7 +75,7 @@
 										<a href="http://me.naver.com/box/noti.nhn" class="gnb_notice_all">내 알림 전체보기</a>
 									</div>
 								</div>
-								<iframe id="gnb_notice_lyr_iframe" title="빈 프레임" class="gnb_pad_lyr" name="padding" width="0" height="0" scrolling="no" frameborder="0" style="top: 55px; right: 10px; width: 299px; height: 332px; display: none; opacity: 0;"></iframe></li>
+								<iframe id="gnb_notice_lyr_iframe" title="빈 프레임" class="gnb_pad_lyr" name="padding" width="0" height="0" scrolling="no" frameborder="0" style="top: 55px; right: 10px; width: 299px; height: 332px; display: none; opacity: 0;" src="./mypage_files/saved_resource(1).html"></iframe></li>
 							<li class="mail_li" id="gnb_mail_layer" style="display: inline-block;"><a href="http://mail.naver.com/" class="gnb_mail"><span class="blind">메일</span><span class="gnb_icon"></span><em class="gnb_ico_num" id="gnb_mail_menu" style="display: block;"><span class="gnb_ico_new"><span class="gnb_count" id="gnb_mail_count" style="display: inline-block;">99<span class="plus">+</span></span></span></em></a></li>
 							<li class="gnb_service_li" id="gnb_service_layer" style="display: inline-block;"><a href="javascript:;" class="gnb_service" onclick="gnbMoreLayer.clickToggle(); return false;"><span class="blind">서비스 더보기</span><span class="gnb_icon"></span><span class="ico_arrow"></span></a>
 							<div class="gnb_service_lyr" id="gnb_service_lyr">
@@ -250,8 +250,8 @@
 										<div class="gnb_bg_btm"></div>
 									</div>
 								</div>
-								<iframe id="gnb_service_lyr_iframe" title="빈 프레임" class="gnb_pad_lyr" name="padding" width="0" height="0" scrolling="no" frameborder="0" style="display: none; top: 55px; right: 311px; width: 585px; height: 385px; opacity: 0;"></iframe>
-								<iframe id="gnb_svc_more_iframe" title="빈 프레임" class="gnb_pad_lyr" name="padding" width="0" height="0" scrolling="no" frameborder="0" style="display: none; top: 55px; right: 10px; width: 295px; height: 385px; opacity: 0;"></iframe></li>
+								<iframe id="gnb_service_lyr_iframe" title="빈 프레임" class="gnb_pad_lyr" name="padding" width="0" height="0" scrolling="no" frameborder="0" style="display: none; top: 55px; right: 311px; width: 585px; height: 385px; opacity: 0;" src="./mypage_files/saved_resource(2).html"></iframe>
+								<iframe id="gnb_svc_more_iframe" title="빈 프레임" class="gnb_pad_lyr" name="padding" width="0" height="0" scrolling="no" frameborder="0" style="display: none; top: 55px; right: 10px; width: 295px; height: 385px; opacity: 0;" src="./mypage_files/saved_resource(3).html"></iframe></li>
 						</ul>
 					</div>
 				</div>
@@ -261,14 +261,19 @@
 			</div>
 			<script type="text/javascript">
 			function fold(a) {
-				alert(document.getElementById("1"));
-				alert(document.getElementById("1").value);
-				alert(document.getElementById("1").display);
-				alert(document.getElementById("1").display=="none");
-				if(document.getElementsByClassName(a).style=="none"){
-					document.getElementsByClassName(a).display="block";
+				if(document.getElementById(a).style.display=="none"){
+					document.getElementById(a).style.display="block";
 				}else{
-					document.getElementsByClassName(a).display="none";
+					document.getElementById	(a).style.display="none";
+				}
+			}
+			function toggle(a) {
+				if(document.getElementById("p_"+a).style.display=="none"){
+					document.getElementById("p_"+a).style.display="block";
+					document.getElementById("i_"+a).className = document.getElementById("i_"+a).className.replace('dn','up');
+				}else{
+					document.getElementById	("p_"+a).style.display="none";
+					document.getElementById("i_"+a).className = document.getElementById("i_"+a).className.replace('up','dn');
 				}
 			}
 var tagList = "nid security ";
@@ -292,7 +297,7 @@ if(menu == "nid1_sub_m3" || menu.substring(0,4) == "nid2") {
 					<div class="sh_group">
 						<div class="sh_header">
 							<h2>네이버 프로필</h2>
-							<a href="javascript:toggle(&#39;profile&#39;);" onclick="clickcr(this,&#39;imn.prfhelp&#39;,&#39;&#39;,&#39;&#39;,event);" class="link_help"><i id="i_profile" class="spico ico_arr3_dn">도움말</i></a>
+							<a href="javascript:toggle(&#39;profile&#39;);" class="link_help"><i id="i_profile" class="spico ico_arr3_dn">도움말</i></a>
 							<!-- [D] 감추기 보이기 dislay:none/block -->
 							<p id="p_profile" class="contxt" style="display: none">
 								네이버에서의 <em>'나'를 표현하는 프로필</em> 정보입니다. <br> 수정 화면에서 프로필 사진과
@@ -314,7 +319,7 @@ if(menu == "nid1_sub_m3" || menu.substring(0,4) == "nid2") {
 							</dl>
 						</div>
 						<p class="btn_area_btm">
-							<a onclick="onclick=&quot;fold(1)&quot;" class="btn_model"><b class="btn2" onclick="fold(&#39;1&#39;)">수정</b></a>
+							<a onclick="onclick=&quot;fold(1)&quot;" class="btn_model"><b class="btn2" onclick="fold(&#39;a1&#39;)">수정</b></a>
 						</p>
 					</div>
 				</div>
@@ -323,7 +328,7 @@ if(menu == "nid1_sub_m3" || menu.substring(0,4) == "nid2") {
 					<div class="sh_group ">
 						<div class="sh_header">
 							<h2>연락처</h2>
-							<a href="javascript:toggle(&#39;userInfo&#39;);" onclick="clickcr(this,&#39;imn.cnthelp&#39;,&#39;&#39;,&#39;&#39;,event);" class="link_help"><i id="i_userInfo" class="spico ico_arr3_dn">도움말</i></a>
+							<a href="javascript:toggle(&#39;userInfo&#39;);" class="link_help"><i id="i_userInfo" class="spico ico_arr3_dn">도움말</i></a>
 							<p id="p_userInfo" class="contxt" style="display: none">
 								네이버에서 <em>중요 내용을 알려드릴 때 사용</em>하는 연락처 정보입니다. 보다 안전한 정보 보호를 위해
 								등록된 연락처의 일부만 보여드립니다. 이름 및 정확한 연락처 정보는 수정 화면에서 확인 가능합니다.
@@ -340,7 +345,7 @@ if(menu == "nid1_sub_m3" || menu.substring(0,4) == "nid2") {
 							</dl>
 						</div>
 						<p class="btn_area_btm">
-							<a onclick="onclick=&quot;fold(2)&quot;" class="btn_model"><b class="btn2" onclick="fold(&#39;2&#39;)">수정</b></a>
+							<a onclick="onclick=&quot;fold(2)&quot;" class="btn_model"><b class="btn2" onclick="fold(&#39;a2&#39;)">수정</b></a>
 						</p>
 					</div>
 					<!-- 가입된 단체아이디 -->
@@ -350,7 +355,7 @@ if(menu == "nid1_sub_m3" || menu.substring(0,4) == "nid2") {
 					<div class="sh_group">
 						<div class="sh_header">
 							<h2>지역 설정</h2>
-							<a href="javascript:toggle(&#39;region&#39;);" onclick="clickcr(this,&#39;imn.reghelp&#39;,&#39;&#39;,&#39;&#39;,event);" class="link_help"><i id="i_region" class="spico ico_arr3_dn">도움말</i></a>
+							<a href="javascript:toggle(&#39;region&#39;);" class="link_help"><i id="i_region" class="spico ico_arr3_dn">도움말</i></a>
 							<p id="p_region" class="contxt" style="display: none">
 								네이버 서비스에서 <em>공통으로 사용되는 지역 정보</em>입니다. <br> 설정되어 있는 모든 지역을
 								보거나 수정하시려면 설정하기를 클릭하세요.
@@ -362,13 +367,13 @@ if(menu == "nid1_sub_m3" || menu.substring(0,4) == "nid2") {
 							</p>
 						</div>
 						<p class="btn_area_btm">
-							<a onclick="fold(3)" class="btn_model"><b class="btn2" onclick="fold(&#39;3&#39;)">설정</b></a>
+							<a onclick="fold(3)" class="btn_model"><b class="btn2" onclick="fold(&#39;a3&#39;)">설정</b></a>
 						</p>
 					</div>
 				</div>
 				<div class="desc_sub">
 				
-				<div class="1" id="1" style="display: none;">
+				<div class="1" id="a1" style="display: none;">
     <div class="c_header">
         <h2>프로필 수정</h2>
         <p class="contxt">네이버 대표 프로필과 별명을 수정 하실 수 있습니다.</p>
@@ -429,7 +434,7 @@ if(menu == "nid1_sub_m3" || menu.substring(0,4) == "nid2") {
     </form>
 </div>
 
-				<div class="2" id="2" style="display: none;"> 
+				<div class="2" id="a2" style="display: none;"> 
 				        <div class="c_header"> 
 							<h2>연락처 수정</h2>
 							<p class="contxt"><strong>dltjdtn321</strong>님의 연락처 정보입니다.<br>
@@ -762,12 +767,12 @@ if(menu == "nid1_sub_m3" || menu.substring(0,4) == "nid2") {
 					</form>
 				</div>
 				
-				<div class="3" id="3" style="display: none;">
+				<div class="3" id="a3" style="display: none;">
 						<div class="c_header">
 							<h2>지역설정</h2>
 							<p class="contxt">네이버 서비스에서 공통으로 사용하고 있는 지역 목록입니다.</p>
 						</div>
-					<form name="fm" id="fm" action="" method="post" onsubmit="return false;">
+					<form name="fm" id="fm" action="file:///C:/Users/Soo/git/SearchPortal/Barcode/WebContent/member/mypage.html" method="post" onsubmit="return false;">
 						<!-- 지역설정 테이블 -->
 						<div id="localTable" style="display: block;">
 						  <table border="0" class="localset_list" summary="추가된 관심지를 변경하거나 삭제 할 수 있습니다.">
