--- a/Barcode/WebContent/search/search_files/saved_resource(27).html
+++ b/Barcode/WebContent/search/search_files/saved_resource(27).html
@@ -1,3 +1,3 @@
 
-<!-- saved from url=(0011)about:blank -->
+<!-- saved from url=(0100)file:///C:/Users/Soo/git/SearchPortal/Barcode/WebContent/search/search_files/saved_resource(27).html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></head><body></body></html>
