--- a/Barcode/WebContent/custom/custom_detail.html
+++ b/Barcode/WebContent/custom/custom_detail.html
@@ -29,7 +29,7 @@
 				<div class="Ngnb">
 					<div class="Ngnb_inner">
 						<a href="http://www.naver.com/" class="Nlogo_link"><span
-							class="Nlogo">NAVER</span></a>
+							class="Nlogo">BARCODE</span></a>
 						<h1 class="Ngnb_service">
 							<a href="https://help.naver.com/support/home.nhn"
 								class="Nhome_link"><span class="Nhome">고객센터</span></a>
@@ -520,21 +520,21 @@
 									<dd>
 										<a
 											href="https://help.naver.com/support/contents/contents.nhn?serviceNo=532&amp;categoryNo=14875&amp;lang=ko"
-											onclick="clickcr(this, &#39;ctr.list&#39;, &#39;&#39;, &#39;&#39;, event);">로그인
+											onclick="clickcr(this, 'ctr.list', '', '', event);">로그인
 											제한 해제 방법(로그인 제한 사유 : 대량생성 ID)<span class="ic"></span>
 										</a>
 									</dd>
 									<dd>
 										<a
 											href="https://help.naver.com/support/contents/contents.nhn?serviceNo=532&amp;categoryNo=18152&amp;lang=ko"
-											onclick="clickcr(this, &#39;ctr.list&#39;, &#39;&#39;, &#39;&#39;, event);">비밀번호
+											onclick="clickcr(this, 'ctr.list', '', '', event);">비밀번호
 											찾기 시 발생한 문제 해결 방법<span class="ic"></span>
 										</a>
 									</dd>
 									<dd>
 										<a
 											href="https://help.naver.com/support/contents/contents.nhn?serviceNo=532&amp;categoryNo=18153&amp;lang=ko"
-											onclick="clickcr(this, &#39;ctr.list&#39;, &#39;&#39;, &#39;&#39;, event);">보호조치
+											onclick="clickcr(this, 'ctr.list', '', '', event);">보호조치
 											해제 시 발생한 문제 해결 방법<span class="ic"></span>
 										</a>
 									</dd>
@@ -548,21 +548,21 @@
 									<dd>
 										<a
 											href="https://help.naver.com/support/contents/contents.nhn?serviceNo=532&amp;categoryNo=12142&amp;lang=ko"
-											onclick="clickcr(this, &#39;ctr.list&#39;, &#39;&#39;, &#39;&#39;, event);">내
+											onclick="clickcr(this, 'ctr.list', '', '', event);">내
 											계정(아이디/비밀번호) 도용 의심<span class="ic"></span>
 										</a>
 									</dd>
 									<dd>
 										<a
 											href="https://help.naver.com/support/contents/contents.nhn?serviceNo=532&amp;categoryNo=12143&amp;lang=ko"
-											onclick="clickcr(this, &#39;ctr.list&#39;, &#39;&#39;, &#39;&#39;, event);">비밀번호
+											onclick="clickcr(this, 'ctr.list', '', '', event);">비밀번호
 											변경으로 인한 로그인 불가<span class="ic"></span>
 										</a>
 									</dd>
 									<dd>
 										<a
 											href="https://help.naver.com/support/contents/contents.nhn?serviceNo=532&amp;categoryNo=12144&amp;lang=ko"
-											onclick="clickcr(this, &#39;ctr.list&#39;, &#39;&#39;, &#39;&#39;, event);">요청하지
+											onclick="clickcr(this, 'ctr.list', '', '', event);">요청하지
 											않은 인증 문자(SMS) 수신<span class="ic"></span>
 										</a>
 									</dd>
@@ -576,21 +576,21 @@
 									<dd>
 										<a
 											href="https://help.naver.com/support/contents/contents.nhn?serviceNo=532&amp;categoryNo=16952"
-											onclick="clickcr(this, &#39;ctr.list&#39;, &#39;&#39;, &#39;&#39;, event);">(신)단체
+											onclick="clickcr(this, 'ctr.list', '', '', event);">(신)단체
 											회원(단체 아이디) 소개<span class="ic"></span>
 										</a>
 									</dd>
 									<dd>
 										<a
 											href="https://help.naver.com/support/contents/contents.nhn?serviceNo=532&amp;categoryNo=16953"
-											onclick="clickcr(this, &#39;ctr.list&#39;, &#39;&#39;, &#39;&#39;, event);">(신)단체
+											onclick="clickcr(this, 'ctr.list', '', '', event);">(신)단체
 											회원 가입 방법<span class="ic"></span>
 										</a>
 									</dd>
 									<dd>
 										<a
 											href="https://help.naver.com/support/contents/contents.nhn?serviceNo=532&amp;categoryNo=14668&amp;lang=ko"
-											onclick="clickcr(this, &#39;ctr.list&#39;, &#39;&#39;, &#39;&#39;, event);">개인
+											onclick="clickcr(this, 'ctr.list', '', '', event);">개인
 											&gt; 단체 아이디 전환<span class="ic"></span>
 										</a>
 									</dd>
@@ -602,7 +602,7 @@
 							<h4 class="blind">카테고리 정보</h4>
 							<ul>
 								<li><a title="회원정보">회원정보</a></li>
-								<li class="last"><strong title="네이버 회원 가입/탈퇴">네이버
+								<li class="last"><strong title="바코드 회원 가입/탈퇴">바코드
 										회원 가입/탈퇴</strong></li>
 							</ul>
 						</div>
@@ -692,7 +692,7 @@
 														<b> - 메일: 보낸 메일함 확인</b>
 													</p>
 													<p>
-														<b> - 네이버페이: 결제 이력 확인</b>
+														<b> - 바코드페이: 결제 이력 확인</b>
 													</p>
 													<p>
 														<b> - 내정보: 등록된 연락처(이메일 주소, 휴대폰 번호)확인</b>
