--- a/Barcode/WebContent/movie/list.html
+++ b/Barcode/WebContent/movie/list.html
@@ -34,7 +34,7 @@
 							<ul class="lst_detail_t1">
 								<li>
 									<div class="thumb">
-										<a href="http://movie.naver.com/movie/bi/mi/basic.nhn?code=85579"><img src="./list_files/movie_image.jpg" alt="신과함께-죄와 벌" onerror="this.src=&#39;http://static.naver.net/movie/2012/09/dft_img99x141.png&#39;"></a>
+										<a href="http://movie.naver.com/movie/bi/mi/basic.nhn?code=85579"><img src="./list_files/movie_image.jpg" alt="신과함께-죄와 벌" onerror="this.src='http://static.naver.net/movie/2012/09/dft_img99x141.png'"></a>
 										<!-- N=a:nol.img,r:1,i:85579 -->
 									</div>
 									<dl class="lst_dsc">
@@ -79,7 +79,7 @@
 								</li>
 								<li>
 									<div class="thumb">
-										<a href="http://movie.naver.com/movie/bi/mi/basic.nhn?code=155665"><img src="./list_files/movie_image(1).jpg" alt="강철비" onerror="this.src=&#39;http://static.naver.net/movie/2012/09/dft_img99x141.png&#39;"></a>
+										<a href="http://movie.naver.com/movie/bi/mi/basic.nhn?code=155665"><img src="./list_files/movie_image(1).jpg" alt="강철비" onerror="this.src='http://static.naver.net/movie/2012/09/dft_img99x141.png'"></a>
 										<!-- N=a:nol.img,r:2,i:155665 -->
 									</div>
 									<dl class="lst_dsc">
@@ -140,7 +140,7 @@
 								</li>
 								<li>
 									<div class="thumb">
-										<a href="http://movie.naver.com/movie/bi/mi/basic.nhn?code=165722"><img src="./list_files/movie_image(2).jpg" alt="극장판 포켓몬스터 너로 정했다!" onerror="this.src=&#39;http://static.naver.net/movie/2012/09/dft_img99x141.png&#39;"></a>
+										<a href="http://movie.naver.com/movie/bi/mi/basic.nhn?code=165722"><img src="./list_files/movie_image(2).jpg" alt="극장판 포켓몬스터 너로 정했다!" onerror="this.src='http://static.naver.net/movie/2012/09/dft_img99x141.png'"></a>
 										<!-- N=a:nol.img,r:4,i:165722 -->
 									</div>
 									<dl class="lst_dsc">
@@ -210,7 +210,7 @@
 								</li>
 								<li>
 									<div class="thumb">
-										<a href="http://movie.naver.com/movie/bi/mi/basic.nhn?code=124263"><img src="./list_files/movie_image(3).jpg" alt="스노우맨" onerror="this.src=&#39;http://static.naver.net/movie/2012/09/dft_img99x141.png&#39;"></a>
+										<a href="http://movie.naver.com/movie/bi/mi/basic.nhn?code=124263"><img src="./list_files/movie_image(3).jpg" alt="스노우맨" onerror="this.src='http://static.naver.net/movie/2012/09/dft_img99x141.png'"></a>
 										<!-- N=a:nol.img,r:41,i:124263 -->
 									</div>
 									<dl class="lst_dsc">
@@ -284,7 +284,7 @@
 								
 								<li>
 									<div class="thumb">
-										<a href="file:///C:/movie/bi/mi/basic.nhn?code=97858"><img src="./list_files/movie_image(4).jpg" alt="월터의 상상은 현실이 된다" onerror="this.src=&#39;http://static.naver.net/movie/2012/09/dft_img99x141.png&#39;"></a>
+										<a href="file:///C:/movie/bi/mi/basic.nhn?code=97858"><img src="./list_files/movie_image(4).jpg" alt="월터의 상상은 현실이 된다" onerror="this.src='http://static.naver.net/movie/2012/09/dft_img99x141.png'"></a>
 										<!-- N=a:sol.img,r:2,i:97858 -->
 									</div>
 									<dl class="lst_dsc">
