--- a/Barcode/WebContent/movie/movie_list.html
+++ b/Barcode/WebContent/movie/movie_list.html
@@ -54,18 +54,18 @@ function delayed_submit(object) {
 					<!-- 무비차트 -->
 					<div class="mv_main" onmouseover="oTimer.abort();" onmouseout="movieChart.restartTimer();">
 						<div class="flick_nav">
-							<a href="" id="flick_prev" class="btn_prev" onclick="clickcr(this, &#39;run.pre&#39;, &#39;&#39;, &#39;&#39;, event);" onfocus="oTimer.abort();" onblur="movieChart.restartTimer();" title="이전"><em>이전</em></a>
+							<a href="" id="flick_prev" class="btn_prev" onclick="clickcr(this, 'run.pre', '', '', event);" onfocus="oTimer.abort();" onblur="movieChart.restartTimer();" title="이전"><em>이전</em></a>
 							<!-- N=a:run.pre -->
 						</div>
 						<!-- flick area -->
 						<div id="mflick" class="flick_view_area flick-view">
 							<div class="flick-container" style="left: -100%; position: relative; width: 100%; height: 430px; transition-duration: 0ms; transform: translate(0px, 0px);">
 								<ul id="flick0" class="flick-ct home_list page0 flick-panel" style="position: absolute; width: 100%; height: 100%; transform: translate(0px, 0px); transition-property: -webkit-transform; left: 100%; z-index: 10;">
-									<li class="item1" onmouseover="jindo.$Element(&#39;currentTooltip1&#39;).show();" onmouseout="jindo.$Element(&#39;currentTooltip1&#39;).hide();">
+									<li class="item1" onmouseover="jindo.$Element('currentTooltip1').show();" onmouseout="jindo.$Element('currentTooltip1').hide();">
 										<div class="obj_off tab4">
-											<a href="file:///C:/movie/bi/mi/basic.nhn?code=165722" onfocus="jindo.$Element(&#39;currentTooltip1&#39;).show();oTimer.abort();" onblur="jindo.$Element(&#39;currentTooltip1&#39;).hide();movieChart.restartTimer();">
+											<a href="file:///C:/movie/bi/mi/basic.nhn?code=165722" onfocus="jindo.$Element('currentTooltip1').show();oTimer.abort();" onblur="jindo.$Element('currentTooltip1').hide();movieChart.restartTimer();">
 												<span class="ico_rating_all">전체 관람가</span> 
-												<span class="mask"></span> <img src="./movie_list_files/movie_image.jpg" alt="극장판 포켓몬스터 너로 정했다!" width="125" height="179" onerror="this.src=&#39;http://static.naver.net/movie/2012/06/dft_img125x179.png&#39;">
+												<span class="mask"></span> <img src="./movie_list_files/movie_image.jpg" alt="극장판 포켓몬스터 너로 정했다!" width="125" height="179" onerror="this.src='http://static.naver.net/movie/2012/06/dft_img125x179.png'">
 												<span class="baseplate r"> <span class="rank_star l">
 												<span class="star_off"><em>별점 - 총 10점 중</em></span>
 												<span class="star_on" style="width: 90.60000000000001%">
@@ -89,11 +89,11 @@ function delayed_submit(object) {
 									</li>
 								</ul>
 								<ul id="flick1" class="flick-ct home_list page1 flick-panel blind" style="position: absolute; width: 100%; height: 100%; transform: translate(0px, 0px); transition-property: -webkit-transform; left: 200%; z-index: 1;">
-									<li onmouseover="jindo.$Element(&#39;commingTooltip8&#39;).show();" onmouseout="jindo.$Element(&#39;commingTooltip8&#39;).hide();">
+									<li onmouseover="jindo.$Element('commingTooltip8').show();" onmouseout="jindo.$Element('commingTooltip8').hide();">
 										<div class="obj_off tab4">
-											<a href="" onfocus="jindo.$Element(&#39;commingTooltip8&#39;).show();oTimer.abort();" onblur="jindo.$Element(&#39;commingTooltip8&#39;).hide();movieChart.restartTimer();">
+											<a href="" onfocus="jindo.$Element('commingTooltip8').show();oTimer.abort();" onblur="jindo.$Element('commingTooltip8').hide();movieChart.restartTimer();">
 											<span class="ico_rating_12">12세 관람가</span> <span class="mask"></span> 
-											<img src="./movie_list_files/movie_image(1).jpg" alt="고스트 스토리" width="125" height="179" onerror="this.src=&#39;http://static.naver.net/movie/2012/06/dft_img125x179.png&#39;">
+											<img src="./movie_list_files/movie_image(1).jpg" alt="고스트 스토리" width="125" height="179" onerror="this.src='http://static.naver.net/movie/2012/06/dft_img125x179.png'">
 											<span class="baseplate r"> <strong class="l">
 												<span class="char rate_num1"><em>1</em></span>
 												<span class="char rate_num2"><em>2</em></span>
@@ -115,11 +115,11 @@ function delayed_submit(object) {
 									</li>
 								</ul>
 								<ul id="flick2" class="flick-ct home_list page2 flick-panel blind" style="position: absolute; width: 100%; height: 100%; transform: translate(0px, 0px); transition-property: -webkit-transform; left: 0%; z-index: 1;">
-									<li class="item3" onmouseover="jindo.$Element(&#39;pointTooltip3&#39;).show();" onmouseout="jindo.$Element(&#39;pointTooltip3&#39;).hide();">
+									<li class="item3" onmouseover="jindo.$Element('pointTooltip3').show();" onmouseout="jindo.$Element('pointTooltip3').hide();">
 										<div class="obj_off tab4">
-											<a href="file:///C:/movie/bi/mi/basic.nhn?code=134846" onfocus="jindo.$Element(&#39;pointTooltip3&#39;).show();oTimer.abort();" onblur="jindo.$Element(&#39;pointTooltip3&#39;).hide();movieChart.restartTimer();">
+											<a href="file:///C:/movie/bi/mi/basic.nhn?code=134846" onfocus="jindo.$Element('pointTooltip3').show();oTimer.abort();" onblur="jindo.$Element('pointTooltip3').hide();movieChart.restartTimer();">
 											<span class="rank"><em>3위</em></span> <span class="ico_rating_all">전체 관람가</span> <span class="mask"></span> 
-											<img src="./movie_list_files/movie_image(2).jpg" alt="드롭박스" width="125" height="179" onerror="this.src=&#39;http://static.naver.net/movie/2012/06/dft_img125x179.png&#39;">
+											<img src="./movie_list_files/movie_image(2).jpg" alt="드롭박스" width="125" height="179" onerror="this.src='http://static.naver.net/movie/2012/06/dft_img125x179.png'">
 												<span class="baseplate r"> <span class="rank_star l">
 												<span class="star_off"><em>별점 - 총 10점 중</em></span>
 												<span class="star_on" style="width: 93.3%"><em>9.33점</em></span>
@@ -145,7 +145,7 @@ function delayed_submit(object) {
 						</div>
 						<!-- //flick area -->
 						<div class="flick_nav">
-							<a href="http://cc.naver.com/cc?a=run.next&amp;r=&amp;i=&amp;bw=1345&amp;px=1050&amp;py=251&amp;sx=1050&amp;sy=251&amp;m=1&amp;nsc=movie.home&amp;u=http%3A%2F%2Flocalhost%3A8080%2FBarcode%2Fmovie%2Fmovie_list.html" id="flick_next" class="btn_next" onclick="clickcr(this, &#39;run.next&#39;, &#39;&#39;, &#39;&#39;, event);" onfocus="oTimer.abort();" onblur="movieChart.restartTimer();" title="다음"><em>다음</em></a>
+							<a href="http://cc.naver.com/cc?a=run.next&amp;r=&amp;i=&amp;bw=1345&amp;px=1050&amp;py=251&amp;sx=1050&amp;sy=251&amp;m=1&amp;nsc=movie.home&amp;u=http%3A%2F%2Flocalhost%3A8080%2FBarcode%2Fmovie%2Fmovie_list.html" id="flick_next" class="btn_next" onclick="clickcr(this, 'run.next', '', '', event);" onfocus="oTimer.abort();" onblur="movieChart.restartTimer();" title="다음"><em>다음</em></a>
 							<!-- N=a:run.next -->
 						</div>
 						<div class="running_tab">
@@ -173,63 +173,63 @@ function delayed_submit(object) {
 										<ul class="lst_con first" data-index="0" style="display: block">
 											<!-- [D] 선택된 경우 li에 class="on" 추가 -->
 											<li id="review1" data-index="0" class="_select_title">
-												<a href="http://movie.naver.com/movie/bi/mi/basic.nhn?code=85579" class="thmb" onclick="clickcr(this, &#39;tvw.img&#39;, &#39;85579&#39;, &#39;1&#39;, event);"><img src="./movie_list_files/movie_image(29).jpg" width="64" height="91" alt="신과함께-죄와 벌" onerror="this.src=&#39;http://static.naver.net/movie/2012/06/dft_img64x91.png&#39;"></a>
+												<a href="http://movie.naver.com/movie/bi/mi/basic.nhn?code=85579" class="thmb" onclick="clickcr(this, 'tvw.img', '85579', '1', event);"><img src="./movie_list_files/movie_image(29).jpg" width="64" height="91" alt="신과함께-죄와 벌" onerror="this.src='http://static.naver.net/movie/2012/06/dft_img64x91.png'"></a>
 												<div class="detail">
-													<a href="http://movie.naver.com/movie/bi/mi/basic.nhn?code=85579" onclick="clickcr(this, &#39;tvw.title&#39;, &#39;85579&#39;, &#39;1&#39;, event);" data-index="0" class="_select_title_anchor"><strong>신과함께-죄와
+													<a href="http://movie.naver.com/movie/bi/mi/basic.nhn?code=85579" onclick="clickcr(this, 'tvw.title', '85579', '1', event);" data-index="0" class="_select_title_anchor"><strong>신과함께-죄와
 															벌</strong>
 														<div class="star_score">
 															<span class="st_off"><span class="st_on" style="width: 82.4%">평점 - 총 10점 중</span></span> <span class="score"> <span class="char sc_num8"><em>8</em></span><span class="char sc_dot"><em>.</em></span><span class="char sc_num2"><em>2</em></span><span class="char sc_num4"><em>4</em></span>
 															</span>
 														</div> </a>
 													<ul class="info">
-														<li><a href="http://movie.naver.com/movie/bi/mi/reviewread.nhn?nid=4588316&amp;code=85579" onclick="clickcr(this, &#39;tvw.list&#39;, &#39;4588316&#39;, &#39;1&#39;, event);"><span class="tit">영화 신과 함께 줄거리, 재미도 있고 특수효과 엄청나네!</span></a></li>
-														<li><a href="http://movie.naver.com/movie/bi/mi/reviewread.nhn?nid=4588009&amp;code=85579" onclick="clickcr(this, &#39;tvw.list&#39;, &#39;4588009&#39;, &#39;2&#39;, event);"><span class="tit">[신과 함께-죄와 벌]한국 영화 판타지 장르의 신기원을 이룬
+														<li><a href="http://movie.naver.com/movie/bi/mi/reviewread.nhn?nid=4588316&amp;code=85579" onclick="clickcr(this, 'tvw.list', '4588316', '1', event);"><span class="tit">영화 신과 함께 줄거리, 재미도 있고 특수효과 엄청나네!</span></a></li>
+														<li><a href="http://movie.naver.com/movie/bi/mi/reviewread.nhn?nid=4588009&amp;code=85579" onclick="clickcr(this, 'tvw.list', '4588009', '2', event);"><span class="tit">[신과 함께-죄와 벌]한국 영화 판타지 장르의 신기원을 이룬
 																	영화!! </span></a></li>
-														<li class="last"><a href="http://movie.naver.com/movie/bi/mi/reviewread.nhn?nid=4588127&amp;code=85579" onclick="clickcr(this, &#39;tvw.list&#39;, &#39;4588127&#39;, &#39;3&#39;, event);"><span class="tit">[2D] 신과 함께 - 죄와 벌 / CG와 함께 - 재미 봄</span></a></li>
+														<li class="last"><a href="http://movie.naver.com/movie/bi/mi/reviewread.nhn?nid=4588127&amp;code=85579" onclick="clickcr(this, 'tvw.list', '4588127', '3', event);"><span class="tit">[2D] 신과 함께 - 죄와 벌 / CG와 함께 - 재미 봄</span></a></li>
 													</ul>
 												</div>
 											</li>
-											<li id="review2" data-index="1" class="_select_title"><a href="http://movie.naver.com/movie/bi/mi/basic.nhn?code=155665" class="thmb" onclick="clickcr(this, &#39;tvw.img&#39;, &#39;155665&#39;, &#39;2&#39;, event);"><img src="./movie_list_files/movie_image(30).jpg" width="64" height="91" alt="강철비" onerror="this.src=&#39;http://static.naver.net/movie/2012/06/dft_img64x91.png&#39;"></a>
+											<li id="review2" data-index="1" class="_select_title"><a href="http://movie.naver.com/movie/bi/mi/basic.nhn?code=155665" class="thmb" onclick="clickcr(this, 'tvw.img', '155665', '2', event);"><img src="./movie_list_files/movie_image(30).jpg" width="64" height="91" alt="강철비" onerror="this.src='http://static.naver.net/movie/2012/06/dft_img64x91.png'"></a>
 												<div class="detail">
-													<a href="http://movie.naver.com/movie/bi/mi/basic.nhn?code=155665" onclick="clickcr(this, &#39;tvw.title&#39;, &#39;155665&#39;, &#39;2&#39;, event);" data-index="1" class="_select_title_anchor"><strong>강철비</strong>
+													<a href="http://movie.naver.com/movie/bi/mi/basic.nhn?code=155665" onclick="clickcr(this, 'tvw.title', '155665', '2', event);" data-index="1" class="_select_title_anchor"><strong>강철비</strong>
 														<div class="star_score">
 															<span class="st_off"><span class="st_on" style="width: 84.4%">평점 - 총 10점 중</span></span> <span class="score"> <span class="char sc_num8"><em>8</em></span><span class="char sc_dot"><em>.</em></span><span class="char sc_num4"><em>4</em></span><span class="char sc_num4"><em>4</em></span>
 															</span>
 														</div> </a>
 													<ul class="info">
-														<li><a href="http://movie.naver.com/movie/bi/mi/reviewread.nhn?nid=4587729&amp;code=155665" onclick="clickcr(this, &#39;tvw.list&#39;, &#39;4587729&#39;, &#39;1&#39;, event);"><span class="tit">&lt;강철비&gt; - 북한을 다룬 꽤 괜찮은 밀리터리 스릴러</span></a></li>
-														<li><a href="http://movie.naver.com/movie/bi/mi/reviewread.nhn?nid=4588054&amp;code=155665" onclick="clickcr(this, &#39;tvw.list&#39;, &#39;4588054&#39;, &#39;2&#39;, event);"><span class="tit">강철비 (2017)</span></a></li>
-														<li class="last"><a href="http://movie.naver.com/movie/bi/mi/reviewread.nhn?nid=4588249&amp;code=155665" onclick="clickcr(this, &#39;tvw.list&#39;, &#39;4588249&#39;, &#39;3&#39;, event);"><span class="tit">강철비 (steel rain) </span></a></li>
+														<li><a href="http://movie.naver.com/movie/bi/mi/reviewread.nhn?nid=4587729&amp;code=155665" onclick="clickcr(this, 'tvw.list', '4587729', '1', event);"><span class="tit">&lt;강철비&gt; - 북한을 다룬 꽤 괜찮은 밀리터리 스릴러</span></a></li>
+														<li><a href="http://movie.naver.com/movie/bi/mi/reviewread.nhn?nid=4588054&amp;code=155665" onclick="clickcr(this, 'tvw.list', '4588054', '2', event);"><span class="tit">강철비 (2017)</span></a></li>
+														<li class="last"><a href="http://movie.naver.com/movie/bi/mi/reviewread.nhn?nid=4588249&amp;code=155665" onclick="clickcr(this, 'tvw.list', '4588249', '3', event);"><span class="tit">강철비 (steel rain) </span></a></li>
 													</ul>
 												</div></li>
-											<li id="review3" data-index="2" class="_select_title"><a href="http://movie.naver.com/movie/bi/mi/basic.nhn?code=125488" class="thmb" onclick="clickcr(this, &#39;tvw.img&#39;, &#39;125488&#39;, &#39;3&#39;, event);"><img src="./movie_list_files/movie_image(31).jpg" width="64" height="91" alt="스타워즈: 라스트 제다이" onerror="this.src=&#39;http://static.naver.net/movie/2012/06/dft_img64x91.png&#39;"></a>
+											<li id="review3" data-index="2" class="_select_title"><a href="http://movie.naver.com/movie/bi/mi/basic.nhn?code=125488" class="thmb" onclick="clickcr(this, 'tvw.img', '125488', '3', event);"><img src="./movie_list_files/movie_image(31).jpg" width="64" height="91" alt="스타워즈: 라스트 제다이" onerror="this.src='http://static.naver.net/movie/2012/06/dft_img64x91.png'"></a>
 												<div class="detail">
-													<a href="http://movie.naver.com/movie/bi/mi/basic.nhn?code=125488" onclick="clickcr(this, &#39;tvw.title&#39;, &#39;125488&#39;, &#39;3&#39;, event);" data-index="2" class="_select_title_anchor"><strong>스타워즈:
+													<a href="http://movie.naver.com/movie/bi/mi/basic.nhn?code=125488" onclick="clickcr(this, 'tvw.title', '125488', '3', event);" data-index="2" class="_select_title_anchor"><strong>스타워즈:
 															라스트 제다이</strong>
 														<div class="star_score">
 															<span class="st_off"><span class="st_on" style="width: 70.6%">평점 - 총 10점 중</span></span> <span class="score"> <span class="char sc_num7"><em>7</em></span><span class="char sc_dot"><em>.</em></span><span class="char sc_num0"><em>0</em></span><span class="char sc_num6"><em>6</em></span>
 															</span>
 														</div> </a>
 													<ul class="info">
-														<li><a href="http://movie.naver.com/movie/bi/mi/reviewread.nhn?nid=4587630&amp;code=125488" onclick="clickcr(this, &#39;tvw.list&#39;, &#39;4587630&#39;, &#39;1&#39;, event);"><span class="tit">스타워즈: 라스트 제다이 (Star Wars: The Last
+														<li><a href="http://movie.naver.com/movie/bi/mi/reviewread.nhn?nid=4587630&amp;code=125488" onclick="clickcr(this, 'tvw.list', '4587630', '1', event);"><span class="tit">스타워즈: 라스트 제다이 (Star Wars: The Last
 																	Jedi, 2017) </span></a></li>
-														<li><a href="http://movie.naver.com/movie/bi/mi/reviewread.nhn?nid=4586261&amp;code=125488" onclick="clickcr(this, &#39;tvw.list&#39;, &#39;4586261&#39;, &#39;2&#39;, event);"><span class="tit">스타워즈:라스트 제다이 IMAX 3D 후기 - 거대한 팬픽션을
+														<li><a href="http://movie.naver.com/movie/bi/mi/reviewread.nhn?nid=4586261&amp;code=125488" onclick="clickcr(this, 'tvw.list', '4586261', '2', event);"><span class="tit">스타워즈:라스트 제다이 IMAX 3D 후기 - 거대한 팬픽션을
 																	보았다.</span></a></li>
-														<li class="last"><a href="http://movie.naver.com/movie/bi/mi/reviewread.nhn?nid=4587557&amp;code=125488" onclick="clickcr(this, &#39;tvw.list&#39;, &#39;4587557&#39;, &#39;3&#39;, event);"><span class="tit">영화 &lt;스타워즈:라스트제다이&gt; 새로운 시작...</span></a></li>
+														<li class="last"><a href="http://movie.naver.com/movie/bi/mi/reviewread.nhn?nid=4587557&amp;code=125488" onclick="clickcr(this, 'tvw.list', '4587557', '3', event);"><span class="tit">영화 &lt;스타워즈:라스트제다이&gt; 새로운 시작...</span></a></li>
 													</ul>
 												</div></li>
-											<li id="review4" data-index="3" class="_select_title on"><a href="http://movie.naver.com/movie/bi/mi/basic.nhn?code=166583" class="thmb" onclick="clickcr(this, &#39;tvw.img&#39;, &#39;166583&#39;, &#39;4&#39;, event);"><img src="./movie_list_files/movie_image(32).jpg" width="64" height="91" alt="세 번째 살인" onerror="this.src=&#39;http://static.naver.net/movie/2012/06/dft_img64x91.png&#39;"></a>
+											<li id="review4" data-index="3" class="_select_title on"><a href="http://movie.naver.com/movie/bi/mi/basic.nhn?code=166583" class="thmb" onclick="clickcr(this, 'tvw.img', '166583', '4', event);"><img src="./movie_list_files/movie_image(32).jpg" width="64" height="91" alt="세 번째 살인" onerror="this.src='http://static.naver.net/movie/2012/06/dft_img64x91.png'"></a>
 												<div class="detail">
-													<a href="http://movie.naver.com/movie/bi/mi/basic.nhn?code=166583" onclick="clickcr(this, &#39;tvw.title&#39;, &#39;166583&#39;, &#39;4&#39;, event);" class="_select_title_anchor"><strong>세 번째 살인</strong>
+													<a href="http://movie.naver.com/movie/bi/mi/basic.nhn?code=166583" onclick="clickcr(this, 'tvw.title', '166583', '4', event);" class="_select_title_anchor"><strong>세 번째 살인</strong>
 														<div class="star_score">
 															<span class="st_off"><span class="st_on" style="width: 81.9%">평점 - 총 10점 중</span></span> <span class="score"> <span class="char sc_num8"><em>8</em></span><span class="char sc_dot"><em>.</em></span><span class="char sc_num1"><em>1</em></span><span class="char sc_num9"><em>9</em></span>
 															</span>
 														</div> </a>
 													<ul class="info">
-														<li><a href="" onclick="clickcr(this, &#39;tvw.list&#39;, &#39;4587041&#39;, &#39;1&#39;, event);"><span class="tit">세 번째 살인 三度目の殺人, The Third Murder</span></a></li>
-														<li><a href="" onclick="clickcr(this, &#39;tvw.list&#39;, &#39;4586059&#39;, &#39;2&#39;, event);"><span class="tit">&lt;세 번째 살인&gt; 죄는 누가 심판하는가? 텅빈 그릇 같은
+														<li><a href="" onclick="clickcr(this, 'tvw.list', '4587041', '1', event);"><span class="tit">세 번째 살인 三度目の殺人, The Third Murder</span></a></li>
+														<li><a href="" onclick="clickcr(this, 'tvw.list', '4586059', '2', event);"><span class="tit">&lt;세 번째 살인&gt; 죄는 누가 심판하는가? 텅빈 그릇 같은
 																	진실</span></a></li>
-														<li class="last"><a href="" onclick="clickcr(this, &#39;tvw.list&#39;, &#39;4587716&#39;, &#39;3&#39;, event);"><span class="tit">[세 번째 살인] 그릇 그리고 죄와 벌 </span></a></li>
+														<li class="last"><a href="" onclick="clickcr(this, 'tvw.list', '4587716', '3', event);"><span class="tit">[세 번째 살인] 그릇 그리고 죄와 벌 </span></a></li>
 													</ul>
 												</div></li>
 										</ul>
