--- a/Barcode/WebContent/movie/movie_reView_files/reviewwrite_photoList.html
+++ b/Barcode/WebContent/movie/movie_reView_files/reviewwrite_photoList.html
@@ -15,25 +15,25 @@
 
 <div class="ifr_area">
 			<div class="insert_img">
-						<a href="javascript:alert(&#39;마지막페이지입니다.&#39;);" title="이전 이미지" class="img_prev_off"><em class="blind">이전 이미지</em></a>
+						<a href="javascript:alert('마지막페이지입니다.');" title="이전 이미지" class="img_prev_off"><em class="blind">이전 이미지</em></a>
 				<div class="img_file">
 					<ul>
 						<li>
-							<p class="file_thumb"><span></span><img src="./movie_image.jpg" onclick="sendImage(&#39;1&#39;, &#39;http://movie.phinf.naver.net/20170608_186/1496884433662MPo8S_JPEG/movie_image.jpg&#39;,&#39;2000&#39;,&#39;1333&#39;);" style="cursor:pointer;" alt="영화 이미지"></p>
-							<input type="checkbox" id="img1" name="imgCheckBox[]" value="http://movie.phinf.naver.net/20170608_186/1496884433662MPo8S_JPEG/movie_image.jpg" onclick="checkboxSendImage(this, &#39;http://movie.phinf.naver.net/20170608_186/1496884433662MPo8S_JPEG/movie_image.jpg&#39;,&#39;2000&#39;,&#39;1333&#39;);" class="chkbox">
+							<p class="file_thumb"><span></span><img src="./movie_image.jpg" onclick="sendImage('1', 'http://movie.phinf.naver.net/20170608_186/1496884433662MPo8S_JPEG/movie_image.jpg','2000','1333');" style="cursor:pointer;" alt="영화 이미지"></p>
+							<input type="checkbox" id="img1" name="imgCheckBox[]" value="http://movie.phinf.naver.net/20170608_186/1496884433662MPo8S_JPEG/movie_image.jpg" onclick="checkboxSendImage(this, 'http://movie.phinf.naver.net/20170608_186/1496884433662MPo8S_JPEG/movie_image.jpg','2000','1333');" class="chkbox">
 						</li>
 						<li>
-							<p class="file_thumb"><span></span><img src="./movie_image(1).jpg" onclick="sendImage(&#39;2&#39;, &#39;http://movie.phinf.naver.net/20170608_230/1496884433834zUnDR_JPEG/movie_image.jpg&#39;,&#39;2000&#39;,&#39;3000&#39;);" style="cursor:pointer;" alt="영화 이미지"></p>
-							<input type="checkbox" id="img2" name="imgCheckBox[]" value="http://movie.phinf.naver.net/20170608_230/1496884433834zUnDR_JPEG/movie_image.jpg" onclick="checkboxSendImage(this, &#39;http://movie.phinf.naver.net/20170608_230/1496884433834zUnDR_JPEG/movie_image.jpg&#39;,&#39;2000&#39;,&#39;3000&#39;);" class="chkbox">
+							<p class="file_thumb"><span></span><img src="./movie_image(1).jpg" onclick="sendImage('2', 'http://movie.phinf.naver.net/20170608_230/1496884433834zUnDR_JPEG/movie_image.jpg','2000','3000');" style="cursor:pointer;" alt="영화 이미지"></p>
+							<input type="checkbox" id="img2" name="imgCheckBox[]" value="http://movie.phinf.naver.net/20170608_230/1496884433834zUnDR_JPEG/movie_image.jpg" onclick="checkboxSendImage(this, 'http://movie.phinf.naver.net/20170608_230/1496884433834zUnDR_JPEG/movie_image.jpg','2000','3000');" class="chkbox">
 						</li>
 						<li>
-							<p class="file_thumb"><span></span><img src="./movie_image(2).jpg" onclick="sendImage(&#39;3&#39;, &#39;http://movie.phinf.naver.net/20171106_23/1509931550772LIVmI_JPEG/movie_image.jpg&#39;,&#39;2000&#39;,&#39;1334&#39;);" style="cursor:pointer;" alt="영화 이미지"></p>
-							<input type="checkbox" id="img3" name="imgCheckBox[]" value="http://movie.phinf.naver.net/20171106_23/1509931550772LIVmI_JPEG/movie_image.jpg" onclick="checkboxSendImage(this, &#39;http://movie.phinf.naver.net/20171106_23/1509931550772LIVmI_JPEG/movie_image.jpg&#39;,&#39;2000&#39;,&#39;1334&#39;);" class="chkbox">
+							<p class="file_thumb"><span></span><img src="./movie_image(2).jpg" onclick="sendImage('3', 'http://movie.phinf.naver.net/20171106_23/1509931550772LIVmI_JPEG/movie_image.jpg','2000','1334');" style="cursor:pointer;" alt="영화 이미지"></p>
+							<input type="checkbox" id="img3" name="imgCheckBox[]" value="http://movie.phinf.naver.net/20171106_23/1509931550772LIVmI_JPEG/movie_image.jpg" onclick="checkboxSendImage(this, 'http://movie.phinf.naver.net/20171106_23/1509931550772LIVmI_JPEG/movie_image.jpg','2000','1334');" class="chkbox">
 						</li>
 					
 						<li>
-							<p class="file_thumb"><span></span><img src="./movie_image(3).jpg" onclick="sendImage(&#39;4&#39;, &#39;http://movie.phinf.naver.net/20171106_78/150993155092192Hrh_JPEG/movie_image.jpg&#39;,&#39;2000&#39;,&#39;1333&#39;);" style="cursor:pointer;" alt="영화 이미지"></p>
-							<input type="checkbox" id="img4" name="imgCheckBox[]" value="http://movie.phinf.naver.net/20171106_78/150993155092192Hrh_JPEG/movie_image.jpg" onclick="checkboxSendImage(this, &#39;http://movie.phinf.naver.net/20171106_78/150993155092192Hrh_JPEG/movie_image.jpg&#39;,&#39;2000&#39;,&#39;1333&#39;);" class="chkbox">
+							<p class="file_thumb"><span></span><img src="./movie_image(3).jpg" onclick="sendImage('4', 'http://movie.phinf.naver.net/20171106_78/150993155092192Hrh_JPEG/movie_image.jpg','2000','1333');" style="cursor:pointer;" alt="영화 이미지"></p>
+							<input type="checkbox" id="img4" name="imgCheckBox[]" value="http://movie.phinf.naver.net/20171106_78/150993155092192Hrh_JPEG/movie_image.jpg" onclick="checkboxSendImage(this, 'http://movie.phinf.naver.net/20171106_78/150993155092192Hrh_JPEG/movie_image.jpg','2000','1333');" class="chkbox">
 						</li>
 					
 					</ul>
