--- a/Barcode/WebContent/movie/ranking.html
+++ b/Barcode/WebContent/movie/ranking.html
@@ -4,12 +4,12 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=euc-kr">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta property="og:article:author" content="네이버 영화">
+<meta property="og:article:author" content="바코드 영화">
 <meta property="og:article:author:url" content="http://movie.naver.com/">
 <link rel="shortcut icon"
 	href="http://static.naver.net/m/movie/icons/naver_movie_favicon.ico"
 	type="image/x-icon">
-<title>랭킹 : 네이버 영화</title>
+<title>랭킹 : 바코드 영화</title>
 <link rel="stylesheet" type="text/css"
 	href="./ranking_files/movie_tablet.css">
 <link rel="stylesheet" type="text/css" href="./ranking_files/common.css">
@@ -40,7 +40,7 @@
 										<!-- onChange 걸어야함 -->
 										<select size="1" name="" style="width: 120px;"
 											class="select_type_1"
-											onchange="document.location.href=&#39;rmovie.nhn?sel=cnt&amp;date=20171225&amp;tg=&#39;+this.value">
+											onchange="document.location.href='rmovie.nhn?sel=cnt&amp;date=20171225&amp;tg='+this.value">
 											<option value="0" selected="">전체</option>
 											<option value="1">드라마</option>
 											<option value="2">판타지</option>
