--- a/Barcode/WebContent/movie/movie_reView.html
+++ b/Barcode/WebContent/movie/movie_reView.html
@@ -130,7 +130,7 @@
 				</div>
 			</div></span>
 			</td>
-			<td width="75" class="tool_option3"><span class="option"><input type="checkbox" name="" value="" id="html" onclick="Editor.$(&#39;textbox&#39;).execCommand(&#39;html&#39;,this,this.checked);" tabindex="1"><label for="html">html</label></span></td>
+			<td width="75" class="tool_option3"><span class="option"><input type="checkbox" name="" value="" id="html" onclick="Editor.$('textbox').execCommand('html',this,this.checked);" tabindex="1"><label for="html">html</label></span></td>
 			</tr>
 			</tbody></table>
 			<!--
@@ -156,8 +156,8 @@
 							<p class="notice"><span>표시된 단어</span>를 클릭하셔서 맞춤법을 수정하실 수 있습니다.
 						</p></div>
 						<div class="btns">
-							<img src="./movie_reView_files/btn_respelling.gif" width="92" height="22" alt="맞춤법 재검사" onclick="Editor.$(&#39;textbox&#39;).execCommand(&#39;spellcheck&#39;,this);Editor.$(&#39;textbox&#39;).execCommand(&#39;spellcheck&#39;,this);">
-							<img src="./movie_reView_files/btn_spellingend.gif" width="56" height="24" alt="검사종료" onclick="Editor.$(&#39;textbox&#39;).execCommand(&#39;spellcheck&#39;,this);">
+							<img src="./movie_reView_files/btn_respelling.gif" width="92" height="22" alt="맞춤법 재검사" onclick="Editor.$('textbox').execCommand('spellcheck',this);Editor.$('textbox').execCommand('spellcheck',this);">
+							<img src="./movie_reView_files/btn_spellingend.gif" width="56" height="24" alt="검사종료" onclick="Editor.$('textbox').execCommand('spellcheck',this);">
 						</div>
 						<p class="cboth"></p>
 					</div>
@@ -655,26 +655,26 @@
 											<table cellspacing="0" cellpadding="0">
 											<tbody><tr>
 											<td class="tit">행</td>
-											<td><div class="control"><input type="text" id="rows_val" name="rows_val" value="4" onblur="{act|change|&#39;chRows&#39;, this.value }"> <span><img src="./movie_reView_files/btn_updown.gif" alt="" width="15" height="16" usemap="#btnRows"></span></div></td>
+											<td><div class="control"><input type="text" id="rows_val" name="rows_val" value="4" onblur="{act|change|'chRows', this.value }"> <span><img src="./movie_reView_files/btn_updown.gif" alt="" width="15" height="16" usemap="#btnRows"></span></div></td>
 											</tr>
 											<tr><td height="5" colspan="2"></td></tr>
 
 											<tr>
 											<td class="tit">열</td>
-											<td><div class="control"><input type="text" id="cols_val" name="cols_val" value="4" onblur="{act|change|&#39;chCols&#39;, this.value }"> <span><img src="./movie_reView_files/btn_updown.gif" alt="" width="15" height="16" usemap="#btnCols"></span></div></td>
+											<td><div class="control"><input type="text" id="cols_val" name="cols_val" value="4" onblur="{act|change|'chCols', this.value }"> <span><img src="./movie_reView_files/btn_updown.gif" alt="" width="15" height="16" usemap="#btnCols"></span></div></td>
 											</tr>
 											</tbody></table>
 											<map name="btnRows">
-											<area alt="" coords="0,0,16,8" href="http://movie.naver.com/movie/bi/mi/reviewwrite.nhn?code=155665&amp;from=list#" onclick="{act|change|&#39;chRows&#39;, &#39;ADD&#39; }">
-											<area alt="" coords="0,9,16,20" href="http://movie.naver.com/movie/bi/mi/reviewwrite.nhn?code=155665&amp;from=list#" onclick="{act|change|&#39;chRows&#39;, &#39;SUB&#39; }">
+											<area alt="" coords="0,0,16,8" href="http://movie.naver.com/movie/bi/mi/reviewwrite.nhn?code=155665&amp;from=list#" onclick="{act|change|'chRows', 'ADD' }">
+											<area alt="" coords="0,9,16,20" href="http://movie.naver.com/movie/bi/mi/reviewwrite.nhn?code=155665&amp;from=list#" onclick="{act|change|'chRows', 'SUB' }">
 											</map>
 											<map name="btnCols">
-											<area alt="" coords="0,0,16,8" href="http://movie.naver.com/movie/bi/mi/reviewwrite.nhn?code=155665&amp;from=list#" onclick="{act|change|&#39;chCols&#39;, &#39;ADD&#39; }">
-											<area alt="" coords="0,9,16,20" href="http://movie.naver.com/movie/bi/mi/reviewwrite.nhn?code=155665&amp;from=list#" onclick="{act|change|&#39;chCols&#39;, &#39;SUB&#39; }">
+											<area alt="" coords="0,0,16,8" href="http://movie.naver.com/movie/bi/mi/reviewwrite.nhn?code=155665&amp;from=list#" onclick="{act|change|'chCols', 'ADD' }">
+											<area alt="" coords="0,9,16,20" href="http://movie.naver.com/movie/bi/mi/reviewwrite.nhn?code=155665&amp;from=list#" onclick="{act|change|'chCols', 'SUB' }">
 											</map>
 											<map name="btnBorder">
-											<area alt="" coords="0,0,16,8" href="http://movie.naver.com/movie/bi/mi/reviewwrite.nhn?code=155665&amp;from=list#" onclick="{act|change|&#39;chBorder&#39;, &#39;ADD&#39; }">
-											<area alt="" coords="0,9,16,20" href="http://movie.naver.com/movie/bi/mi/reviewwrite.nhn?code=155665&amp;from=list#" onclick="{act|change|&#39;chBorder&#39;, &#39;SUB&#39; }">
+											<area alt="" coords="0,0,16,8" href="http://movie.naver.com/movie/bi/mi/reviewwrite.nhn?code=155665&amp;from=list#" onclick="{act|change|'chBorder', 'ADD' }">
+											<area alt="" coords="0,9,16,20" href="http://movie.naver.com/movie/bi/mi/reviewwrite.nhn?code=155665&amp;from=list#" onclick="{act|change|'chBorder', 'SUB' }">
 											</map>
 										</td>
 										<td>
@@ -723,19 +723,19 @@
 										<col width="143">
 										</colgroup><tbody><tr valign="top">
 										<td class="tit">테두리 굵기</td>
-										<td><div class="control"><input type="text" id="border_val" name="border_val" value="1" onblur="{act|change|&#39;chBorder&#39;, this.value }"> <span><img src="./movie_reView_files/btn_updown.gif" alt="" width="15" height="16" usemap="#btnBorder"></span></div></td>
+										<td><div class="control"><input type="text" id="border_val" name="border_val" value="1" onblur="{act|change|'chBorder', this.value }"> <span><img src="./movie_reView_files/btn_updown.gif" alt="" width="15" height="16" usemap="#btnBorder"></span></div></td>
 										</tr>
 										<tr><td height="5" colspan="2"></td></tr>
 
 										<tr>
 										<td height="20" class="tit02">테두리 색</td>
-										<td><div class="color_set"><div class="color_box" onclick="{act|Viewcolorpicker|0 }" style="cursor:pointer"><span id="borderColor" class="color" style="background-color:#B7BBB5;"></span></div>  <input type="text" id="borderColorCode" name="borderColorCode" value="#B7BBB5" class="box_input" style="width:78px; height:20px;" onblur="{act|change|&#39;chBorderColor&#39;,this.value}"> <a href="http://movie.naver.com/movie/bi/mi/reviewwrite.nhn?code=155665&amp;from=list#" onclick="{act|Viewcolorpicker|0 }"><img src="./movie_reView_files/btn_search.gif" alt="찾기" width="33" height="20" class="btn01"></a></div></td>
+										<td><div class="color_set"><div class="color_box" onclick="{act|Viewcolorpicker|0 }" style="cursor:pointer"><span id="borderColor" class="color" style="background-color:#B7BBB5;"></span></div>  <input type="text" id="borderColorCode" name="borderColorCode" value="#B7BBB5" class="box_input" style="width:78px; height:20px;" onblur="{act|change|'chBorderColor',this.value}"> <a href="http://movie.naver.com/movie/bi/mi/reviewwrite.nhn?code=155665&amp;from=list#" onclick="{act|Viewcolorpicker|0 }"><img src="./movie_reView_files/btn_search.gif" alt="찾기" width="33" height="20" class="btn01"></a></div></td>
 										</tr>
 										<tr><td height="3" colspan="2"></td></tr>
 										<tr>
 										<td class="tit02">표 배경색</td>
 
-										<td><div class="color_set"><div class="color_box" onclick="{act|Viewcolorpicker|1 }" style="cursor:pointer"><span id="backColor" class="color" style="background-color:#FFFFFF;"></span></div>  <input type="text" id="backColorCode" name="backColorCode" value="#FFFFFF" class="box_input" style="width:78px; height:20px;" onblur="{act|change|&#39;chBgColor&#39;,this.value}"> <a href="http://movie.naver.com/movie/bi/mi/reviewwrite.nhn?code=155665&amp;from=list#" onclick="{act|Viewcolorpicker|1 }"><img src="./movie_reView_files/btn_search.gif" alt="찾기" width="33" height="20" class="btn01"></a></div></td>
+										<td><div class="color_set"><div class="color_box" onclick="{act|Viewcolorpicker|1 }" style="cursor:pointer"><span id="backColor" class="color" style="background-color:#FFFFFF;"></span></div>  <input type="text" id="backColorCode" name="backColorCode" value="#FFFFFF" class="box_input" style="width:78px; height:20px;" onblur="{act|change|'chBgColor',this.value}"> <a href="http://movie.naver.com/movie/bi/mi/reviewwrite.nhn?code=155665&amp;from=list#" onclick="{act|Viewcolorpicker|1 }"><img src="./movie_reView_files/btn_search.gif" alt="찾기" width="33" height="20" class="btn01"></a></div></td>
 										</tr>
 										<tr><td height="10" colspan="2"></td></tr>
 										</tbody></table>
@@ -947,7 +947,7 @@
 							<div class="spell_check">
 								<ul>{REPLACE}</ul>
 								<div class="spell_search">
-									<input type="text" id="chspell" value="직접입력" style="width:70px; height:19px; font-size:12px;" onfocus="this.value=&#39;&#39;;spellcheckDocPlugin.directInput=1;">
+									<input type="text" id="chspell" value="직접입력" style="width:70px; height:19px; font-size:12px;" onfocus="this.value='';spellcheckDocPlugin.directInput=1;">
 									<img src="./movie_reView_files/btn_spellingedit.gif" width="31" height="20" alt="" style="vertical-align:top;" onclick="spellcheckDocPlugin.changeSpell(this.previousSibling.previousSibling.value)">
 								</div>
 							</div>
