--- a/Barcode/WebContent/movie/movie_reView_files/default(2).html
+++ b/Barcode/WebContent/movie/movie_reView_files/default(2).html
@@ -4092,7 +4092,7 @@ Horizon.prototype = {
 })();
 </script>
 </head>
-<body id="t" style="font-family: &#39;Segoe UI&#39;,Arial,&#39;Malgun Gothic&#39;,Gulim,sans-serif; font-size: 75%" jstcache="0" class="neterror">
+<body id="t" style="font-family: 'Segoe UI',Arial,'Malgun Gothic',Gulim,sans-serif; font-size: 75%" jstcache="0" class="neterror">
   <div id="main-frame-error" class="interstitial-wrapper" jstcache="0">
     <div id="main-content" jstcache="0">
       <div class="icon icon-generic" jseval="updateIconClass(this.classList, iconClass)" alt="" jstcache="1"></div>
@@ -4101,7 +4101,7 @@ Horizon.prototype = {
         <p jsselect="summary" jsvalues=".innerHTML:msg" jstcache="2">이동되었거나 삭제되었을 수 있습니다.</p>
         <div id="suggestions-list" style="display:none" jsdisplay="(suggestionsSummaryList &amp;&amp; suggestionsSummaryList.length)" jstcache="6">
           <p jsvalues=".innerHTML:suggestionsSummaryListHeader" jstcache="13"></p>
-          <ul jsvalues=".className:suggestionsSummaryList.length == 1 ? &#39;single-suggestion&#39; : &#39;&#39;" jstcache="14">
+          <ul jsvalues=".className:suggestionsSummaryList.length == 1 ? 'single-suggestion' : ''" jstcache="14">
             <li jsselect="suggestionsSummaryList" jsvalues=".innerHTML:summary" jstcache="15"></li>
           </ul>
         </div>
